# BIT-SummerTraining

./: .gitignore  CONTRIBUTING.md  README.md  day1assign.py  h origin day-01-your-name  marks.txt  solution.py  student.txt  students.txt  test.txt
Artifical_intelligence/: README.md
resources/: matplotlib-basics.md  numpy-basics.md  pandas-basics.md  seaborn-basics.md
resources/python_project_mangaScanner/: .gitignore  COMPLETION_SUMMARY.md  IMPLEMENTATION_NOTES.md  PROGRESS_CHECKLIST.md  PROJECT_STATUS.md  PROJECT_WALKTHROUGH.md  QUICK_START_OCR.md  README.md  REAL_OCR_GUIDE.md  START_HERE.md  TRY_SAMPLE_INPUTS.md  cbz_report.md  demo_no_ocr.md  my_result.md  pyproject.toml  result.md  results.md  test_with_ocr.md
resources/python_project_mangaScanner/samples/image_folder/: notes.txt
resources/python_project_mangaScanner/scripts/: create_demo_cbz.py  create_sample_inputs.py  make_student_distribution.py
resources/python_project_mangaScanner/src/manga_markdown_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
resources/python_project_mangaScanner/src/manga_scanner/: __init__.py  cli.py  errors.py  loaders.py  markdown.py  models.py  ocr.py  real_ocr.py  scanner.py  sorting.py
resources/python_project_mangaScanner/tests/: conftest.py  test_cli.py  test_cli_extended.py  test_edge_cases.py  test_loaders.py  test_loaders_extended.py  test_markdown.py  test_markdown_extended.py  test_scanner.py  test_scanner_extended.py  test_sorting.py  test_sorting_extended.py
scripts/: audit_open_prs.py
tests/: test_audit_open_prs.py  (+1 more)
(+614 files in other folders)
