[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-markdown-scanner"
version = "0.1.0"
description = "Student assignment scaffold for scanning manga/manhwa sources into Markdown."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0,<12",
    "PyMuPDF>=1.23,<1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
manga-scan = "manga_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
